methode ajouter equipage
